fix alignment issues and add string customization for choose button

--- a/client/src/ui/styles/SelectedPeopleList.scss
+++ b/client/src/ui/styles/SelectedPeopleList.scss
@@ -9,5 +9,12 @@
     width: 100%;
   }
   padding: 0.75rem;
+  overflow: hidden;
   display: inline-block;
+}
+
+.selected_people_list__pod-content {
+  display: flex;
+  height: 100%;
+  align-items: center;
 }
